# papi-quickjs

./: CMakeLists.txt  README.md  make_android.sh  make_ios.sh  make_linux64.sh  make_ohos.sh  make_osx.sh  make_wasm.sh  make_win64.bat
.github/workflows/: build.yml
include/: CppObjectMapper.h  CppObjectMapperQuickjs.h  JSClassRegister.h  ObjectCacheNode.h  PapiData.h
papi-register/source/: JSClassRegister.cpp  RapiImpl.cpp
quickjs/: quickjs.c  quickjs.h
source/: CppObjectMapper.cpp  CppObjectMapperQuickjs.cpp  PapiQuickjsImpl.cpp
test/: CppObjectMapperTest.cpp  papi_qjs_base_test.cpp
